# LOG-CPP

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README  TODO  clear_tmp.sh  configure.ac  log_main.sln  setup.sh
projects/log/: log.vcxproj  log.vcxproj.filters
projects/log_main/: log_main.vcxproj
src/: Makefile.am  config.h.in  main.cpp
src-cmake/: logConfig.h.in  main.cpp
src-cmake/log/: CMakeLists.txt  log.cpp  log.h
src-old/: main.cpp
src-old/log/include/: log.h
src-old/log/include/common/util/: parser.h  va_list_helpers.h
src-old/log/include/common/util/XMLParser/: XmlParser.h
src-old/log/include/full/: full_log.h
src-old/log/include/simple/: simple_log.h
src-old/log/source/: log.cpp
src-old/log/source/common/util/: parser.cpp  va_list_helpers.cpp
src-old/log/source/common/util/XMLParser/: XmlParser.cpp
src-old/log/source/full/: full_log.cpp
src-old/log/source/simple/: simple_log.cpp
src-old/log/source/trivial/: trivial_log.cpp
src/log/: Makefile.am  full_log.cpp  log.cpp  log.h  simple_log.cpp  simple_log.h  trivial_log.cpp  trivial_log.h
src/log/common/: Makefile.am
src/log/common/util/: Makefile.am  XmlParser.cpp  XmlParser.h  parser.cpp  parser.h  va_list_helpers.cpp  va_list_helpers.h
src/log/common/util/RapidXml/: Makefile.am
src/log/source/common/util/: parser.cpp
src/log/source/simple/: simple_log.cpp
